2011-04-11  Chung-Lin Tang  <cltang@codesourcery.com> 	    Richard Earnshaw  <rearnsha@arm.com>

PR target/48250
	* config/arm/arm.c (arm_legitimize_reload_address): Update cases
	to use sign-magnitude offsets. Reject unsupported unaligned
	cases. Add detailed description in comments.
	* config/arm/arm.md (reload_outdf): Disable for ARM mode; change
	condition from TARGET_32BIT to TARGET_ARM.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@172297 138bc75d-0d04-0410-961f-82ee72b054a4